# cineverse-ai

./: README.md  THIRD_PARTY_NOTICES.md  home.html  login.html  manifest.webmanifest  movie-details.html  pyproject.toml  sw.js  watchlist.html
.kiro/specs/movie-recommendation-system/: .config.kiro  design.md  requirements.md  tasks.md
backend/: __init__.py  main.py  movie_service.py  recommendation.py  recommendation_engine.py  requirements.txt
backend/cache/: __init__.py
backend/dataset/: movies.csv
backend/utils/: __init__.py  data_cleaning.py  preprocessing.py
css/: login.css  style.css
js/: home.js  login.js  movie-details.js  movie-service.js  particles.js
public/: home.html  index.html  login.html  manifest.webmanifest  movie-details.html  sw.js  watchlist.html
public/css/: home.css
public/data/: movies.json
public/js/: auth.js  home.js  login.js  movie-details.js  movie-service.js  storage.js  watchlist.js
